RESOLVED FIXED20817
ImplicitAnimation has incorrect ASSERT in destructor
https://bugs.webkit.org/show_bug.cgi?id=20817
Summary ImplicitAnimation has incorrect ASSERT in destructor
Dean Jackson
Reported 2008-09-12 17:11:24 PDT
The ImplicitAnimation destructor has an unneeded ASSERT in the destructor. It's occasionally firing when events are about.
Attachments
patch (1.42 KB, patch)
2008-09-12 17:16 PDT, Dean Jackson
timothy: review+
Dean Jackson
Comment 1 2008-09-12 17:16:40 PDT
Dean Jackson
Comment 2 2008-09-12 17:33:38 PDT
Timothy Hatcher
Comment 3 2008-09-13 06:33:08 PDT
Comment on attachment 23383 [details] patch Yes!
Dean Jackson
Comment 4 2008-09-15 14:32:51 PDT
M WebCore/ChangeLog M WebCore/page/animation/ImplicitAnimation.cpp Committed r36457
Note You need to log in before you can comment on or make changes to this bug.