2008-09-15  Dean Jackson  <dino@apple.com>

Reviewed by Tim Hatcher.

        Unnecessary ASSERT in ImplicitAnimation destructor.
        https://bugs.webkit.org/show_bug.cgi?id=20817

        * page/animation/ImplicitAnimation.cpp:
        (WebCore::ImplicitAnimation::~ImplicitAnimation):


Canonical link: https://commits.webkit.org/28746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36457 268f45cc-cd09-0410-ab3c-d52691b4dbfc