WebCore/page/animation/ImplicitAnimation.cpp
@@ -49,13 +49,9 @@ ImplicitAnimation::~ImplicitAnimation()
 {
     ASSERT(!m_fromStyle && !m_toStyle);
 
-    // If we were waiting for an end event, we need to finish the animation to make sure no old
-    // animations stick around in the lower levels
-    ASSERT(!waitingForEndEvent() || !m_object);
-    
     // Do the cleanup here instead of in the base class so the specialized methods get called
     if (!postActive())
-        updateStateMachine(AnimationStateInputEndAnimation, -1);     
+        updateStateMachine(AnimationStateInputEndAnimation, -1);
 }
 
 bool ImplicitAnimation::shouldSendEventForListener(Document::ListenerType inListenerType)
